Reactivated button in menu. Changed detail in QuestionGenerator. Changed readme.md

--- a/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
+++ b/Projekt/Teachify/Teachify/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmx-tT-Z0p">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmx-tT-Z0p">
                                 <rect key="frame" x="127" y="199" width="121" height="30"/>
                                 <state key="normal" title="Piano Math Game"/>
                                 <connections>
